--- a/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-dic-5-bpe.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-dic-5-bpe.yml
@@ -35,10 +35,6 @@ services:
       - 5005:5005
     environment:
       EXTRA_JVM_ARGS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
-
-      EXECUTE_PROPERTY_NAME: "distributed-org.de"
-      REQUEST_PROPERTY_NAME: "distributed-org.de"
-
       DEV_DSF_SERVER_AUTH_TRUST_CLIENT_CERTIFICATE_CAS: /run/secrets/app_client_trust_certificates.pem
       DEV_DSF_BPE_DB_LIQUIBASE_PASSWORD_FILE: /run/secrets/db_liquibase.password
       DEV_DSF_BPE_DB_USER_PASSWORD_FILE: /run/secrets/db_broker_dic_5_bpe_user.password
@@ -56,6 +52,8 @@ services:
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-5-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
+      EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
     networks:
       broker-dic-5-bpe-frontend:
       broker-dic-5-bpe-backend:
