Stand 09.08. Testsetup funktioniert. Prozess läuft bis aggregate measure reports.

--- a/mii-process-feasibility-docker-test-setup/docker-compose.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.yml
@@ -1094,6 +1094,7 @@ services:
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-5-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION_SUBDIC: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
     networks:
@@ -1121,7 +1122,7 @@ services:
       timeout: 15s
       retries: 5
     ports:
-      - "127.0.0.1:8085:8080"
+      - "8085:8080"
     environment:
       BASE_URL: http://127.0.0.1:8085
       LOG_LEVEL: debug
@@ -1250,6 +1251,7 @@ services:
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-6-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION_SUBDIC: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
     networks:
@@ -1277,7 +1279,7 @@ services:
       timeout: 15s
       retries: 5
     ports:
-     - "127.0.0.1:8086:8080"
+     - "8086:8080"
     environment:
       BASE_URL: http://127.0.0.1:8086
       LOG_LEVEL: debug
