--- a/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-bpe.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-bpe.yml
@@ -32,9 +32,9 @@ services:
       source: ./broker/bpe/cache
       target: /opt/bpe/cache
   ports:
-    - 5000:5005
+    - 5010:5010
   environment:
-    EXTRA_JVM_ARGS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+    EXTRA_JVM_ARGS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5010
     TZ: Europe/Berlin
     DEV_DSF_SERVER_AUTH_TRUST_CLIENT_CERTIFICATE_CAS: /run/secrets/app_client_trust_certificates.pem
     DEV_DSF_BPE_DB_LIQUIBASE_PASSWORD_FILE: /run/secrets/db_liquibase.password
@@ -70,3 +70,74 @@ services:
 #    broker-store:
 #      condition: service_healthy
 #      restart: true
+
+ broker-fhir-app:
+    image: ghcr.io/datasharingframework/fhir:1.3.1
+    restart: on-failure
+    healthcheck:
+      test: [ "CMD-SHELL", "./healthcheck.sh" ]
+      interval: 10s
+      timeout: 15s
+      retries: 5
+    secrets:
+      - db_liquibase.password
+      - db_fhir_broker_user.password
+      - db_fhir_broker_user_permanent_delete.password
+      - app_client_trust_certificates.pem
+      - app_broker_client_certificate.pem
+      - app_broker_client_certificate_private_key.pem
+      - app_client_certificate_private_key.pem.password
+    volumes:
+      - type: bind
+        source: ./broker/fhir/conf/bundle.xml
+        target: /opt/fhir/conf/bundle.xml
+      - type: bind
+        source: ./broker/fhir/log
+        target: /opt/fhir/log
+    ports:
+      - 5011:5011
+    environment:
+      EXTRA_JVM_ARGS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5011
+      TZ: Europe/Berlin
+      DEV_DSF_SERVER_AUTH_TRUST_CLIENT_CERTIFICATE_CAS: /run/secrets/app_client_trust_certificates.pem
+      DEV_DSF_FHIR_DB_LIQUIBASE_PASSWORD_FILE: /run/secrets/db_liquibase.password
+      DEV_DSF_FHIR_DB_USER_PASSWORD_FILE: /run/secrets/db_fhir_broker_user.password
+      DEV_DSF_FHIR_DB_USER_PERMANENT_DELETE_PASSWORD_FILE: /run/secrets/db_fhir_broker_user_permanent_delete.password
+      DEV_DSF_FHIR_CLIENT_TRUST_SERVER_CERTIFICATE_CAS: /run/secrets/app_client_trust_certificates.pem
+      DEV_DSF_FHIR_CLIENT_CERTIFICATE: /run/secrets/app_broker_client_certificate.pem
+      DEV_DSF_FHIR_CLIENT_CERTIFICATE_PRIVATE_KEY: /run/secrets/app_broker_client_certificate_private_key.pem
+      DEV_DSF_FHIR_CLIENT_CERTIFICATE_PRIVATE_KEY_PASSWORD_FILE: /run/secrets/app_client_certificate_private_key.pem.password
+      DEV_DSF_FHIR_DB_URL: jdbc:postgresql://db/broker_fhir
+      DEV_DSF_FHIR_DB_USER_GROUP: broker_fhir_users
+      DEV_DSF_FHIR_DB_USER_USERNAME: broker_fhir_server_user
+      DEV_DSF_FHIR_DB_USER_PERMANENT_DELETE_GROUP: broker_fhir_permanent_delete_users
+      DEV_DSF_FHIR_DB_USER_PERMANENT_DELETE_USERNAME: broker_fhir_server_permanent_delete_user
+      DEV_DSF_FHIR_SERVER_BASE_URL: https://broker/fhir
+      DEV_DSF_FHIR_SERVER_ORGANIZATION_IDENTIFIER_VALUE: Test_Broker
+      DEV_DSF_FHIR_SERVER_ORGANIZATION_THUMBPRINT: ${BROKER_USER_THUMBPRINTS}
+      DEV_DSF_FHIR_SERVER_ROLECONFIG: |
+        - webbrowser_test_user:
+            thumbprint: ${WEBBROWSER_TEST_USER_THUMBPRINT}
+            token-role: admin
+            dsf-role:
+              - CREATE
+              - READ
+              - UPDATE
+              - DELETE
+              - SEARCH
+              - HISTORY
+              - PERMANENT_DELETE
+              - WEBSOCKET
+            practitioner-role:
+              - http://dsf.dev/fhir/CodeSystem/practitioner-role|DSF_ADMIN
+    networks:
+      broker-fhir-frontend:
+        ipv4_address: 172.10.0.180
+      broker-fhir-backend:
+      internet:
+    depends_on:
+      db:
+        condition: service_healthy
+        restart: true
+      proxy:
+        condition: service_healthy
