Prototyp distribution. Obfuscate Bug.

--- a/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-dic-5-bpe.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.debug.broker-dic-5-bpe.yml
@@ -51,7 +51,7 @@ services:
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://broker-dic-5/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-5-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
-      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "false"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION_SUBDIC: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
