--- a/mii-process-feasibility-docker-test-setup/docker-compose.yml
+++ b/mii-process-feasibility-docker-test-setup/docker-compose.yml
@@ -1093,7 +1093,7 @@ services:
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://broker-dic-5/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-5-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
-      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "false"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION_SUBDIC: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
@@ -1250,7 +1250,7 @@ services:
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://broker-dic-6/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-dic-6-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
-      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
+      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "false"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION_SUBDIC: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_EXECUTE_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_REQUEST_ORGANIZATION_IDENTIFIER_VALUE: "distributed-org.de"
@@ -1410,7 +1410,6 @@ services:
       DEV_DSF_BPE_DB_USER_CAMUNDA_GROUP: broker_camunda_users
       DEV_DSF_BPE_DB_USER_CAMUNDA_USERNAME: broker_camunda_server_user
       DEV_DSF_BPE_FHIR_SERVER_BASE_URL: https://broker/fhir
-#      DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_CLIENT_STORE_BASE_URL: http://broker-store:8080/fhir
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_STRATEGY: cql
       DE_MEDIZININFORMATIK_INITIATIVE_FEASIBILITY_DSF_PROCESS_EVALUATION_OBFUSCATE: "true"
       EDU_UBI_MEDFAK_FEASIBILITY_DSF_PROCESS_DISTRIBUTION: true
@@ -1427,32 +1426,7 @@ services:
       broker-fhir-app:
         condition:  service_healthy
         restart: true
-#      broker-store:
-#        condition: service_healthy
-#        restart: true
 
-#  # ---- BROKER-DIC - FHIR Data Store ----------------------------------------------
-#  broker-store:
-#    image: samply/blaze:0.24
-#    restart: on-failure
-#    healthcheck:
-#      test: [ "CMD", "curl", "http://localhost:8080/health" ]
-#      interval: 10s
-#      timeout: 15s
-#      retries: 5
-#    ports:
-#      - "127.0.0.1:8080:8080"
-#    environment:
-#      BASE_URL: http://127.0.0.1:8080
-#      LOG_LEVEL: debug
-#    networks:
-#      broker-bpe-backend:
-#        aliases:
-#          - broker-store
-#    volumes:
-#      - type: volume
-#        source: broker-store-data
-#        target: /app/data
 
 secrets:
   proxy_certificate_and_int_cas.pem:
