Use DIC-3 Store with OAuth Authentication

--- a/mii-process-feasibility-docker-test-setup/dic-3/proxy/nginx.conf
+++ b/mii-process-feasibility-docker-test-setup/dic-3/proxy/nginx.conf
@@ -27,18 +27,35 @@ http {
     ssl_prefer_server_ciphers off;
     add_header Strict-Transport-Security "max-age=63072000" always;
 
+    # DNS resolver needed for Docker
+    resolver 127.0.0.11 valid=10s;
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
         http2 on;
+        server_name dic-3-store-proxy;
 
         location / {
-            auth_basic "dic_3_store_auth";
-            auth_basic_user_file /run/secrets/dic_3_store_proxy.htpasswd;
+            set $store_upstream dic-3-store:8080;
+            proxy_pass http://$store_upstream;
 
-            proxy_set_header X-ClientCert $ssl_client_escaped_cert;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_read_timeout 43200s;
+        }
+    }
 
-            proxy_pass http://172.10.0.117:8080;
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
+        server_name dic-3-keycloak-proxy;
+
+        location / {
+            set $keycloak_upstream dic-3-keycloak:8080;
+            proxy_pass http://$keycloak_upstream;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
