--- a/mii-process-feasibility-docker-test-setup/proxy/conf.d/dic-3.conf
+++ b/mii-process-feasibility-docker-test-setup/proxy/conf.d/dic-3.conf
@@ -1,16 +1,21 @@
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name dic-3;
+
+    # DNS resolver needed for Docker
+    resolver 127.0.0.11 valid=10s;
 
     location / {
         proxy_set_header X-ClientCert $ssl_client_escaped_cert;
 
-        proxy_pass http://172.10.0.115:8080;
+        set $upstream dic-3-fhir-app:8080;
+        proxy_pass http://$upstream;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-		proxy_read_timeout 43200s;
+        proxy_read_timeout 43200s;
     }
 }
