Add Link to Wiki in Release Notes
Adjust release notes structure to other DSF process plugins.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,7 @@ jobs:
       with:
         draft: true
         generate_release_notes: true
+        body_path: .github/release-notes.md
         files: |
           mii-process-feasibility/target/mii-process-feasibility-*.jar
           mii-process-feasibility/target/mii-process-feasibility-*.jar.sha256
