Ignore Normal Dependency Update in Release Notes

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,6 +3,7 @@ changelog:
     labels:
       - ignore-for-release
       - release
+      - dependencies
     authors:
       - octocat
   categories:
